2006-10-23  Rick Moseley  <rmoseley@redhat.com>

	* DOMFactory.java: Add new printDOM method.
	* DOMFrysk.java: Return the root JDOM Element.
	* DOMImage.java: Accept the root JDOM Element.
	Add the image to the root JDOM Element.

2006-10-20  Rick Moseley  <rmoseley@redhat.com>

	* cparser/CDTParser.java: Add "debug" boolean to print DOM if wanted.
	Fix indexing when variable definitions are found.
	* cparser/CTagsParser.java: Pass DOMFrysk as a parameter.
	* cparser/SimpleParser.java: Ditto.
	* StaticParser.java: Ditto.
	* DOMFactory.java: Ditto.
	Add ability to print the DOM for debugging.

2006-10-18  Rick Moseley  <rmoseley@redhat.com>

	* cparser/CDTParser.java: Add CodeREader so #include files get 
	processed properly.
	Fix acceptMacro so it only processes macros from the source file.
	Fix enterInclusion so it only processes #includes from the source
	file.

2006-10-16  Rick Moseley  <rmoseley@redhat.com>

	* cparser/CDTParser.java: Fix substring error for line.addTag call.

2006-10-12  Rick Moseley  <rmoseley@redhat.com>

	* cparser/CDTParser.java: Add obvious include paths.
	Remove debug statements.

2006-10-11  Rick Moseley  <rmoseley@redhat.com>

	* cparser/CDTParser.java: Remove QUICK parser(at least for now).
	Check for which language we are parsing(C or CPP).
	Format.

2006-10-09  Adam Jocksch  <ajocksch@redhat.com>

	* DOMFactory.java (createDOM): Now checks for a relative path to the
	source file and uses the compilation directory instead if a relative
	path is found.

2006-10-04  Mike Cvet  <mcvet@redhat.com>

	* DOMFactory.java (createDOM): Gets the image associated with the 
	main task's name.
	(createDOM): Gets the source from the image associated wtih the main
	task's name.

2006-10-01  Adam Jocksch  <ajocksch@redhat.com>

	* DOMSource.java: Reformatted.

2006-09-28  Rick Moseley  <rmoseley@redhat.com>

	* cparser/CDTParser.java: Fix function name highlighting(bz #3275).

2006-09-19  Rick Moseley  <rmoseley@redhat.com>
